# reglens

./: .coverage 2  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: build-images.yml  ci.yml  deploy-pages.yml  evals-live.yml  evals-nightly.yml  images.yml  migrate.yml  terraform.yml
docker/: adk.Dockerfile  api.Dockerfile  langgraph.Dockerfile
docs/: AWS_DEPLOYMENT_PLAN.md  IMPLEMENTATION_PLAN.md  UI_PLAN.md
evals/: __init__.py
evals/behavioral/: _runner.py  competency.py  counterfactual.py  invariance.py  monotonicity.py
evals/component/: __init__.py  _common.py  gap_eval.py  ingestion_eval.py  rag_eval.py  risk_eval.py  routing_eval.py
evals/datasets/end_to_end/: scenarios.json
evals/datasets/gap/: labeled_gaps.json
evals/datasets/ingestion/: labeled_obligations.json
evals/datasets/rag/: retrieval_pairs.json
evals/datasets/risk/: labeled_risks.json
evals/datasets/routing/: scenarios.json
evals/end_to_end/: langsmith_evaluators.py  scenarios.py
evals/guards/: __init__.py  a2a_guards.py  llm_guards.py  rag_guards.py  types.py
evals/metrics/: __init__.py  run_metrics.py
fixtures/control_matrices/: banking.yaml
fixtures/regulations/: README.md
infra/: README.md
infra/terraform/: .terraform.lock.hcl  backend.hcl.example  main.tf  outputs.tf  variables.tf  versions.tf
infra/terraform/bootstrap/: main.tf
infra/terraform/modules/ecr/: main.tf  outputs.tf  variables.tf
infra/terraform/modules/ecs/: alb.tf  main.tf  outputs.tf  secrets.tf  service.tf  variables.tf
infra/terraform/modules/network/: main.tf  outputs.tf
infra/terraform/modules/rds/: main.tf  outputs.tf  variables.tf
scripts/: seed_rag.py
site/: README.md  index.html
src/reglens/: __init__.py  config.py  errors.py
src/reglens/a2a/: __init__.py  card.py  client.py  discovery.py  idempotency.py  server.py
src/reglens/agents/: __init__.py
src/reglens/agents/gap_analyzer/: __init__.py  analyzer.py  node.py  prompts.py
src/reglens/agents/ingestion/: __init__.py  agent.py  prompts.py  server.py
src/reglens/agents/knowledge/: __init__.py  node.py  retriever.py
src/reglens/agents/report/: __init__.py  renderer.py
src/reglens/agents/risk_scorer/: __init__.py  agent.py  prompts.py  server.py
src/reglens/api/: __init__.py  deps.py  main.py  sse.py
src/reglens/api/middleware/: request_id.py
src/reglens/api/routers/: health.py  policies.py  runs.py  stats.py
src/reglens/domain/: __init__.py
src/reglens/domain/banking/: __init__.py  risk_rubric.yaml
src/reglens/llm/: __init__.py  _retry.py  claude.py  gemini.py
src/reglens/observability/: langsmith.py  logging.py  tracing.py
src/reglens/persistence/: db.py  models.py
src/reglens/persistence/migrations/: env.py
src/reglens/persistence/migrations/versions/: 001_baseline_schema.py  002_policies_schema_v2.py  003_policies_vector_3072.py  004_drop_matrix_filename.py
src/reglens/rag/: __init__.py  ingest.py  store.py
src/reglens/schemas/: __init__.py  gap.py  obligation.py  policy.py  report.py  risk.py  run.py
src/reglens/supervisor/: __init__.py  checkpoint.py  graph.py  nodes.py  pipeline.py  routing.py  server.py  state.py
tests/: conftest.py
tests/unit/: test_a2a.py  test_agents.py  test_deps.py  test_discovery.py  test_eval_end_to_end.py  test_eval_guards.py  test_eval_metrics.py  test_gap_analyzer.py  test_knowledge.py  test_llm.py  test_misc.py  test_nodes.py  test_observability.py  test_observability_langsmith.py  test_persistence.py  test_pipeline.py  test_policies_api.py  test_rag.py  test_runs.py  test_schemas.py  test_smoke.py  test_sse.py  test_sse_stream.py  test_stats_api.py
ui/: .env.example  .gitignore  README.md  package-lock.json  package.json
ui/app/: globals.css  layout.tsx  page.tsx
ui/app/policies/: page.tsx
ui/app/policies/[id]/: page.tsx
ui/app/runs/: page.tsx
ui/app/runs/[id]/: page.tsx
ui/app/runs/[id]/report/: page.tsx
ui/app/runs/[id]/review/: page.tsx
ui/app/runs/new/: page.tsx
ui/app/settings/: page.tsx
ui/components/: KeyboardShortcuts.tsx  Shell.tsx  Skeleton.tsx  StatusBadge.tsx  Toasts.tsx
ui/lib/: api.ts
