[project]
name = "reglens"
version = "0.1.0"
description = "Multi-agent regulatory compliance automation powered by LangGraph and Google ADK, connected via the A2A protocol."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Manas Rai", email = "rai.manas12@gmail.com" },
]
requires-python = ">=3.11"
keywords = ["compliance", "multi-agent", "langgraph", "adk", "a2a", "regulatory"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    # Core
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.4,<3",
    # Logging
    "structlog>=24.4,<26",
    # Observability (skeleton in Phase 0; collectors wired in later phases)
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27",
    # Persistence
    "sqlalchemy>=2.0,<3",
    "alembic>=1.13,<2",
    "psycopg[binary]>=3.2,<4",
    "pgvector>=0.3,<1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "mypy>=1.11",
    "pydantic[mypy]>=2.7",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "pre-commit>=3.8",
    "types-PyYAML",
]

[project.urls]
Repository = "https://github.com/manasrai/reglens"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reglens"]

# ---------------------------------------------------------------------------
# Tooling

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "S",    # flake8-bandit (security)
    "N",    # pep8-naming
    "RUF",  # ruff-specific rules
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "TCH",  # flake8-type-checking
]
ignore = [
    "E501",  # line length (formatter handles it)
    "S101",  # assert is fine in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106"]  # assert + hard-coded passwords in tests

[tool.ruff.lint.isort]
known-first-party = ["reglens"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_reexport = true
show_error_codes = true
files = ["src/reglens"]
mypy_path = ["src"]
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: requires docker-compose services",
    "e2e: full end-to-end run, slow",
]

[tool.coverage.run]
source = ["src/reglens"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
