[project]
name = "reglens"
version = "0.1.0"
description = "Multi-agent regulatory compliance automation powered by LangGraph and Google ADK, connected via the A2A protocol."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Manas Rai", email = "rai.manas12@gmail.com" },
]
requires-python = ">=3.12"
keywords = ["compliance", "multi-agent", "langgraph", "adk", "a2a", "regulatory"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Legal Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    # Core
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.4,<3",
    # Logging
    "python-json-logger>=3.2,<4",
    # Observability (skeleton in Phase 0; collectors wired in later phases)
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-grpc>=1.27",
    # Persistence
    "sqlalchemy[asyncio]>=2.0,<3",
    "alembic>=1.13,<2",
    "psycopg[binary]>=3.2,<4",
    "pgvector>=0.3,<1",
    # Phase 1 — LangGraph orchestration
    "langgraph>=0.3,<1",
    "langgraph-checkpoint-postgres>=2.0,<3",
    # Phase 1 — LLM clients
    "google-genai>=1.10,<2",
    "anthropic>=0.40,<1",
    "instructor>=1.7,<2",
    # Phase 1 — API + transport
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "python-multipart>=0.0.12,<1",
    "httpx>=0.27,<1",
    "tenacity>=9.0,<10",
    "sse-starlette>=2.1,<3",
    # Phase 1 — Data processing
    "PyYAML>=6.0,<7",
    "pypdf>=5.0,<6",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "mypy>=1.11",
    "pydantic[mypy]>=2.7",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=5",
    "pre-commit>=3.8",
    "types-PyYAML",
]

[project.urls]
Repository = "https://github.com/manasrai/reglens"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reglens"]

# ---------------------------------------------------------------------------
# Tooling

[tool.ruff]
line-length = 88
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "S",    # flake8-bandit (security)
    "N",    # pep8-naming
    "RUF",  # ruff-specific rules
    "SIM",  # flake8-simplify
    "TID",  # flake8-tidy-imports
    "TCH",  # flake8-type-checking
]
ignore = [
    "E501",  # line length (formatter handles it)
    "S101",  # assert is fine in tests
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106"]
# SQLAlchemy evaluates Mapped[] annotations at runtime — datetime/uuid must be real imports
"src/reglens/persistence/models.py" = ["TCH003"]
# FastAPI Depends() in defaults is the canonical FastAPI dependency injection pattern
"src/reglens/api/**" = ["B008", "TC001", "TC002"]
# Agent nodes use runtime type annotations for LangGraph state dispatch
"src/reglens/supervisor/**" = ["TC001", "TC002", "TC003"]
"src/reglens/agents/**" = ["TC001", "TC002"]
"src/reglens/rag/**" = ["TC001", "TC002", "TC003"]
"src/reglens/schemas/**" = ["TC001", "TC002"]
# AgentCard is used at runtime as a function parameter type in make_a2a_app
"src/reglens/a2a/server.py" = ["TC001"]
# 0.0.0.0 is intentional in Docker server entrypoints
"src/reglens/agents/ingestion/server.py" = ["S104"]
"src/reglens/agents/risk_scorer/server.py" = ["S104"]
"src/reglens/supervisor/server.py" = ["S104"]

[tool.ruff.lint.isort]
known-first-party = ["reglens"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_any_generics = true
no_implicit_reexport = true
show_error_codes = true
files = ["src/reglens"]
mypy_path = ["src"]
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false


[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: requires docker-compose services",
    "e2e: full end-to-end run, slow",
]

[tool.coverage.run]
source = ["src/reglens"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
